Updated project and text-content
Replaced OptiAmazer project in projects section to FuelCalc
Also updated text-content like age and some informations on the landing page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -143,8 +143,9 @@
   background-image: url("../img/desktop-page-nadmuchani.webp");
 }
 
-.project__optiamazer {
-  background-image: url("../img/desktop-page.webp");
+.project__fuelCalcs {
+  background-image: url("../img/desktop-page.png");
+  background-size: cover;
 }
 
 .projects__container__item__about {
