Add width and position styles to html and body

--- a/public/css/config.css
+++ b/public/css/config.css
@@ -25,6 +25,8 @@ html,
 body {
   overflow-x: hidden;
   -webkit-backface-visibility: hidden;
+  width: 100%;
+  position: relative;
 }
 
 .prevent-scroll {
